--- a/Colourful Grammar/index.html
+++ b/Colourful Grammar/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Colourful Grammar</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="styler.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   
   <script src="https://cdn.jsdelivr.net/npm/wordpos-web@1.0.2/dist/wordpos.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="/script.js" defer></script>
+  <script src="/scripter.js" defer></script>
 
   
 </body>
